{
    "name": "ActionControl",
    "maps": [
        {
            "name": "MainAction",
            "id": "e02702c1-6ba0-4ab2-8250-b3680815d5d3",
            "actions": [
                {
                    "name": "Moviment",
                    "type": "Value",
                    "id": "0ee8ec3d-f769-4064-aca7-c6f72a1f3987",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SouthButton",
                    "type": "Button",
                    "id": "01e18da7-0794-475f-8297-150c3721d229",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NorthButton",
                    "type": "Button",
                    "id": "bbd32057-ea51-4743-a8ec-d62808a8ac17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WestButton",
                    "type": "Button",
                    "id": "b1b46f3d-eee0-4728-b4b7-f4f3948a42a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis Keyboard",
                    "id": "8a0f9bb0-1191-4c70-874a-4daa533c2b94",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviment",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9254046e-4e18-4d7b-990f-cd33b07aa38a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f599334c-d5b0-4ef7-aa6c-bc2f14684185",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moviment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "68444480-c74e-4944-a666-bd42962bd80a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "633878ff-75e1-48cd-b786-4dc62d3f70a3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d251ece5-6b0e-41d3-89de-34a3cf6b9366",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}